[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rs_uinput_kb"
description = "A Python wrapper for Linux /dev/uinput keystroke simulation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rs_uinput_kb.rs_uinput_kb"